removed for loop, python file now takes input

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Document</title>
 </head>
 
-<body><a href="website_9.html">website_9</a>
+<body><a href="newpage.html">newpage</a>
+<a href="website_9.html">website_9</a>
+<a href="website_8.html">website_8</a>
+<a href="website_7.html">website_7</a>
+<a href="website_6.html">website_6</a>
+<a href="website_5.html">website_5</a>
+<a href="website_4.html">website_4</a>
+<a href="website_3.html">website_3</a>
+<a href="website_2.html">website_2</a>
+<a href="website_1.html">website_1</a>
+<a href="website_0.html">website_0</a>
+<a href="website_9.html">website_9</a>
 <a href="website_8.html">website_8</a>
 <a href="website_7.html">website_7</a>
 <a href="website_6.html">website_6</a>
